[package]
name = "lifxc"
version = "0.1.0"
authors = ["Harrison Rigg <riggh@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Command line utility for controlling LIFX smart lights"
readme = "README.md"
homepage = "https://github.com/psr31/lifxc"
repository = "https://github.com/psr31/lifxc"
edition = "2018"

[dependencies]
toml = "0.5.8"
anyhow = "1.0.45"
futures = "0.3.17"
clap = "3.0.0-beta.5"
directories = "4.0.1"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }

